2005-09-26  Rohit Kumar <rokumar@novell.com>
	* libvncserver/{auth,main,rfbserver}.c, rfb/{rfb,rfbproto}.h:
	  support VNC protocol version 3.7. This allows to add security
	  types.

2005-08-21  Alberto Lusiani <alusiani@gmail.com>
	* libvncserver.spec.in: split rpm into libvncserver, -devel and x11vnc

2005-07-12  Karl Runge <runge@karlrunge.com>
	* x11vnc: tweaks for release, fix queue buildup under -viewonly

2005-07-10  Karl Runge <runge@karlrunge.com>
	* x11vnc: -grab_buster for breaking XGrabServer deadlock, fix
	  scrolls and copyrect for -clip and -id cases.

2005-07-06  Karl Runge <runge@karlrunge.com>
	* x11vnc: -gui tray now embeds in systray; more improvements to gui.

2005-07-01  Karl Runge <runge@karlrunge.com>
	* libvncserver/httpd.c: make sure httpListenSock >=0 in rfbHttpCheckFds
	* x11vnc: add simple "-gui tray" mode for small icon like x0rfbserver
	  had (someday/somehow to auto embed in a tray/dock)

2005-06-28  Johannes E. Schindelin  <Johannes.Schindelin@gmx.de>
	* libvncclient/zrle.c: fix handling of raw and fill subtypes
	  (off-by-one and off-by-many bug)

2005-06-27  Karl Runge <runge@karlrunge.com>
	* libvncserver/main.c: move deferUpdateTime and maxRectsPerUpdate
	  defaults to before rfbProcessArguments().

2005-06-18  Karl Runge <runge@karlrunge.com>
	* configure.ac: don't use -R on HP-UX and OSF1.
	* x11vnc: don't free the current cursor, close stderr
	  for -inetd -q and no -o logfile, set DISPLAY for -solid
	  external calls.

2005-06-14  Karl Runge <runge@karlrunge.com>
	* configure.ac: XReadScreen and XReadDisplay checks.
	* libvncserver/cursor.c: fix unsigned long crash for 64bits.
	* x11vnc: first round of beta-testing fixes, RFE's.

2005-06-10  Johannes E. Schindelin  <Johannes.Schindelin@gmx.de>
	* configure.ac: fix that annoying SUN /usr/ccs location of "ar"

2005-06-03  Karl Runge <runge@karlrunge.com>
	* libvncserver/main.c: remove sraRgnSubtract from copyRegion
	* x11vnc: scrollcopyrect under -scale, add -fixscreen.
